--- a/.github/workflows/example-workflow.yml
+++ b/.github/workflows/example-workflow.yml
@@ -14,21 +14,27 @@ permissions:
   contents: read
 
 jobs:
-  say-hello:
+  build:
     name: Say Hello
     runs-on: ubuntu-latest
-
     steps:
-      # Change @main to a specific commit SHA or version tag, e.g.:
-      # actions/hello-world-javascript-action@e76147da8e5c81eaf017dede5645551d4b94427b
-      # actions/hello-world-javascript-action@v1.2.3
       - name: Print to Log
         id: print-to-log
         uses: a-bobkov/hello-world-javascript-action@main
         with:
           who-to-greet: ${{ inputs.who-to-greet }}
-      - name: Archive test artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload as artifact
+        id: deployment
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: dist-without-markdown
-          path: pages/test.txt
+          path: pages/
+  deploy:
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
